# lem-in

./: CCC NE TROZH OPASNO  CMakeLists.txt  Makefile  a.out  add_data.c  algo.c  algo_old.c  author  ft_strsplit.c  lem-in  lem-in.h  lem_in.h  lib.c  main.c  test  test1  visu
includes/: lem_in.h  lem_in_viz.h
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
libft/: Makefile  libft.h.gch
old_viz/: Makefile  main_viz.c  visu
old_viz/lib/pkgconfig/: sdl2.pc
srcs/algo/: add_data.c  add_room.c  algo.c  check.c  lem_go.c  lem_in.h  main.c
srcs/visu/: add_arr.c  connect.c  coord.c  error.c  main_viz.c  move.c  move2.c  new.c  pomoch.c  valid.c  valid_help.c  vizu.c
visu_maps/: test5
visualize/: CMakeLists.txt  a.out  visu
visualize/include/: lem_in_viz.h
visualize/libft/: Makefile  ft_atoi.c  ft_isalnum.c  ft_isdigit.c  ft_lstadd.c  ft_lstdel.c  ft_lstmap.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_putnbr.c  ft_putstr_fd.c  ft_strcat.c  ft_strcpy.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_strjoin.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c
visualize/src/: error.c  main_viz.c  valid.c  valid_help.c
visualize_new/: CMakeLists.txt  Makefile  a.out  test
visualize_new/include/: lem_in_viz.h
visualize_new/libft/: ft_bzero.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_memalloc.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  ft_strncpy.c  ft_strrev.c  ft_strsub.c  ft_swap.c  libft.h
visualize_new/src/: add_arr.c  connect.c  coord.c  error.c  main_viz.c  move.c  move2.c  new.c  valid.c  valid_help.c  vizu.c
vizualize/: CMakeLists.txt  Makefile  lem_in_viz.h  main_viz.c
vizualize/include/: lem_in_viz.h
vizualize/lib/: libSDL2-2.0.0.dylib
vizualize/lib/cmake/SDL2/: sdl2-config.cmake
