cmake_minimum_required(VERSION 3.15)
project(vizualize C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(SDL)

add_executable(vizualize
        SDL/begin_code.h
        SDL/close_code.h
        SDL/SDL.h
        SDL/SDL_assert.h
        SDL/SDL_atomic.h
        SDL/SDL_audio.h
        SDL/SDL_bits.h
        SDL/SDL_blendmode.h
        SDL/SDL_clipboard.h
        SDL/SDL_config.h
        SDL/SDL_cpuinfo.h
        SDL/SDL_egl.h
        SDL/SDL_endian.h
        SDL/SDL_error.h
        SDL/SDL_events.h
        SDL/SDL_filesystem.h
        SDL/SDL_gamecontroller.h
        SDL/SDL_gesture.h
        SDL/SDL_haptic.h
        SDL/SDL_hints.h
        SDL/SDL_joystick.h
        SDL/SDL_keyboard.h
        SDL/SDL_keycode.h
        SDL/SDL_loadso.h
        SDL/SDL_log.h
        SDL/SDL_main.h
        SDL/SDL_messagebox.h
        SDL/SDL_mouse.h
        SDL/SDL_mutex.h
        SDL/SDL_name.h
        SDL/SDL_opengl.h
        SDL/SDL_opengl_glext.h
        SDL/SDL_opengles.h
        SDL/SDL_opengles2.h
        SDL/SDL_opengles2_gl2.h
        SDL/SDL_opengles2_gl2ext.h
        SDL/SDL_opengles2_gl2platform.h
        SDL/SDL_opengles2_khrplatform.h
        SDL/SDL_pixels.h
        SDL/SDL_platform.h
        SDL/SDL_power.h
        SDL/SDL_quit.h
        SDL/SDL_rect.h
        SDL/SDL_render.h
        SDL/SDL_revision.h
        SDL/SDL_rwops.h
        SDL/SDL_scancode.h
        SDL/SDL_sensor.h
        SDL/SDL_shape.h
        SDL/SDL_stdinc.h
        SDL/SDL_surface.h
        SDL/SDL_system.h
        SDL/SDL_syswm.h
        SDL/SDL_test.h
        SDL/SDL_test_assert.h
        SDL/SDL_test_common.h
        SDL/SDL_test_compare.h
        SDL/SDL_test_crc32.h
        SDL/SDL_test_font.h
        SDL/SDL_test_fuzzer.h
        SDL/SDL_test_harness.h
        SDL/SDL_test_images.h
        SDL/SDL_test_log.h
        SDL/SDL_test_md5.h
        SDL/SDL_test_memory.h
        SDL/SDL_test_random.h
        SDL/SDL_thread.h
        SDL/SDL_timer.h
        SDL/SDL_touch.h
        SDL/SDL_types.h
        SDL/SDL_version.h
        SDL/SDL_video.h
        SDL/SDL_vulkan.h
        lem_in_viz.h
        main_viz.c)
